[1;36m==> modified : exodia-assistant/PKGBUILD [0m     [1;36m==> modified : exodia-assistant/exodia-assistant.install [0m     [1;31m==> deleted : exodia-assistant/files/exodia-assistant/Keybindings/MDs/bspwm.md[0m     [1;31m==> deleted : exodia-assistant/files/exodia-assistant/Keybindings/MDs/dwm.md[0m     [1;31m==> deleted : exodia-assistant/files/exodia-assistant/Keybindings/MDs/i3wm.md[0m     [1;31m==> deleted : exodia-assistant/files/exodia-assistant/Keybindings/__pycache__/keybinding.cpython-311.pyc[0m     [1;31m==> deleted : exodia-assistant/files/exodia-assistant/Keybindings/keybinding.py[0m     [1;31m==> deleted : exodia-assistant/files/exodia-assistant/__pycache__/welcome.cpython-311.pyc[0m     [1;31m==> deleted : exodia-assistant/files/exodia-assistant/developers/__pycache__/developers.cpython-311.pyc[0m     [1;31m==> deleted : exodia-assistant/files/exodia-assistant/developers/developers.py[0m     [1;31m==> deleted : exodia-assistant/files/exodia-assistant/developers/images/Abdallah.png[0m     [1;31m==> deleted : exodia-assistant/files/exodia-assistant/developers/images/omar.png[0m     [1;31m==> deleted : exodia-assistant/files/exodia-assistant/developers/images/wolf.png[0m     [1;31m==> deleted : exodia-assistant/files/exodia-assistant/exodia-assistant[0m     [1;31m==> deleted : exodia-assistant/files/exodia-assistant/exodia-assistant.py[0m     [1;31m==> deleted : exodia-assistant/files/exodia-assistant/exodiaApps/__pycache__/exodiaApps.cpython-311.pyc[0m     [1;31m==> deleted : exodia-assistant/files/exodia-assistant/exodiaApps/exodiaApps.py[0m     [1;31m==> deleted : exodia-assistant/files/exodia-assistant/images/discord.png[0m     [1;31m==> deleted : exodia-assistant/files/exodia-assistant/images/exodia-cyan.png[0m     [1;31m==> deleted : exodia-assistant/files/exodia-assistant/images/exodia.png[0m     [1;31m==> deleted : exodia-assistant/files/exodia-assistant/images/facebook.png[0m     [1;31m==> deleted : e

--- a/exodia-assistant/PKGBUILD
+++ b/exodia-assistant/PKGBUILD
@@ -3,13 +3,13 @@
 #
 
 pkgname=exodia-assistant
-pkgver=1.7
-pkgrel=9
+pkgver=2.0
+pkgrel=1
 pkgdesc="Assistant Manager for Exodia OS"
 url="https://github.com/Exodia-OS/exodia-apps"
 arch=('any')
 license=('GPL3')
-makedepends=()
+depends=('python-pyqt5' 'python-pyqt5-chart' 'python-xlib')
 groups=('exodia-apps')
 conflicts=('exodia-help')
 provides=("${pkgname}")
